--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -1,5 +1,24 @@
 <?xml version="1.0"?>
 <odoo>
+    <record id="estate_property_view_search" model="ir.ui.view">
+        <field name="name">estate.property.search</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <search string="Search Property">
+                <field name="name"/>
+                <field name="postcode"/>
+                <field name="expected_price"/>
+                <field name="bedrooms"/>
+                <field name="living_area"/>
+                <field name="facades"/>
+                <!-- <field name="facades"/> -->
+                <filter string="Available" name="available_properties" domain="['|',('state','=','Offer Received'),('state','=','New')]"/>
+                <filter string="Postcode" name="group_postcode" context="{'group_by':'postcode'}"/>
+                <!-- <filter string="test_filter" name="test_filter" domain="['&amp;', ('expected_price','&lt;=', 10000), ('living_area', '>', 100)]"/> -->
+            </search>
+        </field>
+    </record>
+
     <record id="estate_property_view_form" model="ir.ui.view">
         <field name="name">estate.property.form</field>
         <field name="model">estate.property</field>
